app/assets/stylesheets/custom.css
.home-bg {
  top: 0;
  left: -12%;
  width: 125vw;
  height: 108lvh;
  z-index: -1;
  position: fixed;
  background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.3)),
              url('axe-stump.webp');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center top;
  transform: translateZ(0);
  -webkit-transform: translateZ(0);
}

.services-bg {
  top: 0;
  left: -12%;
  width: 125vw;
  height: 108lvh;
  z-index: -1;
  position: fixed;
  background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.3)),
              url('stihl-chainsaw.webp');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center top;
  transform: translateZ(0);
  -webkit-transform: translateZ(0);
}

.blur {
  background-color: rgba(0, 0, 0, 0.4);
  backdrop-filter: blur(10px);
  -webkit-backdrop-filter: blur(10px);
}

navbar, .footer-container {
  background-color: rgba(0, 0, 0, 0.8);
}

.contacts-text {
  line-height: 1.25;
  display: block;
}

.hero-section {
  min-height: 93vh;
}

.content-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 1000px;
}

.login-section {
  min-height: 90vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.login-container {
  width: clamp(25vw, 400px, 95vw);
}

.dashboard-section {
  min-height: 86vh;
}

.dashboard-card .card-body {
  height: 400px;
}

.dashboard-card-link i {
  font-size: 4em;
}

.hero-logo {
  width: clamp(20vw, 300px, 50vw);
}

figure {
  font-weight: bold;
}

figcaption {
  color: rgba(235, 235, 235) !important;
  font-weight: bold;
}

.testimonials-section {
  min-height: 700px;
}

.testimonial {
  min-height: 450px;
}

blockquote {
  font-family: "Saira Stencil One", sans-serif;
}

.testimony {
  font-size: 1.3rem;
}

.text-shadow {
  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.9);
}

.text-shadow-gray {
  text-shadow: 1px 1px 5px rgba(75, 75, 75, 0.5);
}

.text-shadow-light {
  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
}

.icon-container {
  width: 33%;
}

.admin-testimonial-card {
  min-height: 500px;
}

.job-card-body {
  height: 300px;
}

.testimonial-text-container {
  width: 75%;
}

@media ( max-width: 480px ) {
  .testimonial-text-container {
    width: 100%;
  }

  .testimony {
    font-size: 1.2rem;
  }
}



/* IMAGES */

.preview-image {

  height: 100px;
  width: auto;
  object-fit: cover;
  object-position: center;
}

.recent-gallery-img {
  aspect-ratio: 3 / 2;
  width: 100%;
  height: auto;
  object-fit: cover;
  object-position: center;
}

.carousel-image {
  aspect-ratio: 3 / 2;
  object-fit: cover;
  object-position: center;
  max-width: 100%;
  height: auto;
}

.avatar {
  aspect-ratio: 1 / 1;
  width: clamp(8vw, 150px, 32vw);
  height: auto;
  border-radius: 50%;
  object-fit: cover;
  object-position: center;
}

.gallery-img {
  aspect-ratio: 3 / 2;
  object-fit: cover;
  object-position: center;
  width: clamp(20vw, 400px, 100vw);
}

.value-icon {
  width: 4rem;
  height: 4rem;
  margin-bottom: 1em;
}

.values-container {
  margin-inline: auto;
  border-radius: 0;
  clip-path: polygon(100% 40%, 100% 100%, 0% 100%, 0% 40%, 5% 0%, 95% 0%);
}

.about-details-img {
  width: 25%;
}

.image-container {
  position: relative;
}

.remove-image-button {
  position: absolute;
  top: 0;
  right: 2px;
}

.service-card-img {
  aspect-ratio: 3 / 2;
  object-fit: cover;
  object-position: center;
}

@media (max-width: 480px) {
  .about-details-img {
    width: 35%;
  }

  .value-icon {
    width: 2.5rem;
    height: 2.5rem;
    margin-bottom: 0.5em;
  }

  .icon-container h4 {
    font-size: 1rem;
  }
}

@media (max-width: 992px) {
  .values-container {
    clip-path: polygon(100% 40%, 100% 100%, 0% 100%, 0% 40%, 8% 0%, 92% 0%);
  }
}

@media (max-width: 768px) {
  .values-container {
    min-width: 100%;
  }
}


/* BUTTONS */

.cta-btn {
  border-radius: 0;
  clip-path: polygon(100% 55%, 82% 100%, 0% 100%, 0% 45%, 18% 0%, 100% 0%);
  border: none;
}

.cta-btn-lg {
  border-radius: 0;
  clip-path: polygon(100% 55%, 88% 100%, 0% 100%, 0% 45%, 12% 0%, 100% 0%);
  border: none;
}

.show-controls > a, .show-controls button {
  width: clamp(5vw, 125px, 28vw);
}

.fixed-icon-link {
  font-size: 4em;
  position: fixed;
  bottom: 3%;
  right: 10px;
}


/* BREAK POINTS */
@media (min-width: 768px) {
  .cta-btn {
    padding-top: 7px;
  }
}

